# open-paws-content-pipeline

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.desloppify/: plan.json  plan.json.bak  progression.jsonl  query.json  state-python.json  state-python.json.bak
.github/workflows/: auto-merge.yml  quality-gates.yml  security-scan.yml
config/: model_routing.yaml  topics.yaml
docs/: huggingface-strategy.md
src/articles/: client.py  evaluator.py  generator.py  nav_checker.py  publisher.py  topics.py
src/distribution/: scheduler.py
src/multilingual/: translator.py
src/pipeline/: orchestrator.py
src/training_data/: exporter.py  schema.py
src/video/: script_generator.py  shorts_pipeline.py
tests/: test_aha_evaluator.py  test_article_generator.py  test_client.py  test_distribution_scheduler.py  test_multilingual.py  test_nav_checker.py  test_orchestrator.py  test_publisher.py  test_topics.py  test_training_data_schema.py
